# Claude-to-Obsidian

./: .gitignore  Build Release.bat  Launch Claude-to-Obsidian.bat  README.md  REWRITE_PLAN.md  package.json  pnpm-lock.yaml
legacy-python/: .gitignore  requirements.txt
legacy-python/src/: config.json  main.py
scripts/: cargo-msvc.bat  rasterize-logo.mjs  tauri-build.bat  tauri-dev.bat
src/: app.css  app.html  config.json  main.py  sync.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/concepts/: preview.html
src-tauri/src/: autodetect.rs  config.rs  error.rs  lib.rs  main.rs  scheduler.rs  vault.rs
src-tauri/src/sync/: mod.rs  observations.rs  summaries.rs
src/lib/: types.ts
src/lib/components/: CreateVaultDialog.svelte  LastSyncStatus.svelte  OpenInObsidian.svelte  PathCard.svelte  SettingsCard.svelte  SyncProgress.svelte  ThemeToggle.svelte
src/lib/stores/: config.svelte.ts  sync.svelte.ts  theme.svelte.ts
src/routes/: +page.svelte
