[package]
name = "claude-to-obsidian"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_to_obsidian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-store = "2.4.2"
tauri-plugin-autostart = "2.5.1"
rusqlite = { version = "0.39", features = ["bundled"] }
thiserror = "2.0.18"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dirs = "6.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.52.1", features = ["time", "rt", "macros", "sync"] }

